<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DashboardCardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/permission_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/permission_battery_optimization_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/permission_body"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/privacy_policy_link"
            app:layout_constraintEnd_toEndOf="@id/permission_title"
            app:layout_constraintStart_toStartOf="@id/permission_title"
            app:layout_constraintTop_toBottomOf="@id/permission_title"
            tools:text="@string/permission_battery_optimization_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/privacy_policy_link"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/settings_privacy_policy_label"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/grant_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permission_body"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss_action"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_maybe_later_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/grant_action"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/grant_action"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/permission_grant_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/dismiss_action"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>